--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=69,13
+Pos=17,10
 Size=235,671
 Collapsed=0
 
@@ -29,18 +29,18 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1032,48
-Size=201,160
+Pos=980,77
+Size=204,221
 Collapsed=0
 
 [Window][Object Editor]
-Pos=894,519
-Size=355,239
+Pos=1074,260
+Size=167,309
 Collapsed=0
 
 [Window][Edit TestObject8]
-Pos=887,89
-Size=345,393
+Pos=866,262
+Size=272,414
 Collapsed=0
 
 [Window][Edit TestObject51]
@@ -51,5 +51,55 @@ Collapsed=1
 [Window][Edit TestObject54]
 Pos=289,59
 Size=213,215
+Collapsed=0
+
+[Window][Edit TestObject65]
+Pos=330,4
+Size=324,504
+Collapsed=0
+
+[Window][Edit TestObject68]
+Pos=339,127
+Size=189,234
+Collapsed=0
+
+[Window][Edit TestObject71]
+Pos=365,375
+Size=189,92
+Collapsed=0
+
+[Window][Edit TestObject74]
+Pos=531,261
+Size=189,92
+Collapsed=0
+
+[Window][Edit TestObject77]
+Pos=552,28
+Size=557,507
+Collapsed=0
+
+[Window][Edit TestObject89]
+Pos=60,60
+Size=189,92
+Collapsed=0
+
+[Window][Edit TestObject86]
+Pos=60,60
+Size=189,92
+Collapsed=0
+
+[Window][Edit TestObject83]
+Pos=60,60
+Size=189,92
+Collapsed=0
+
+[Window][Edit TestObject80]
+Pos=479,111
+Size=333,250
+Collapsed=0
+
+[Window][Log]
+Pos=130,9
+Size=282,681
 Collapsed=0
 
