Deferred Pass Impl....

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=17,10
+Pos=208,346
 Size=235,671
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=813,8
+Pos=1387,28
 Size=550,544
 Collapsed=1
 
@@ -29,12 +29,12 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=980,77
+Pos=1430,474
 Size=204,221
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1074,260
+Pos=1173,672
 Size=167,309
 Collapsed=0
 
@@ -99,7 +99,12 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=130,9
+Pos=767,530
 Size=282,681
+Collapsed=0
+
+[Window][Edit TestObject10]
+Pos=1286,110
+Size=410,403
 Collapsed=0
 
