--- a/Engine/Project/Engine.vcxproj.filters
+++ b/Engine/Project/Engine.vcxproj.filters
@@ -109,5 +109,8 @@
     <ClInclude Include="..\Header\AnimNotify.h" />
     <ClInclude Include="..\Header\IconsFontAwesome5.h" />
     <ClInclude Include="..\Header\ShaderTester.h" />
+    <ClInclude Include="..\..\Resource\Shader\GBuffer.hlsl" />
+    <ClInclude Include="..\Header\Vertexs.h" />
+    <ClInclude Include="..\..\Resource\Shader\ScreenQuad.hlsl" />
   </ItemGroup>
 </Project>
