--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=729,13
+Pos=960,28
 Size=550,545
 Collapsed=0
 
@@ -29,22 +29,22 @@ Size=350,200
 Collapsed=0
 
 [Window][Delete?]
-Pos=593,245
-Size=18,4
+Pos=508,304
+Size=264,112
 Collapsed=0
 
 [Window][Stacked 2]
-Pos=549,326
+Pos=550,326
 Size=181,68
 Collapsed=0
 
 [Window][Stacked 1]
-Pos=483,278
+Pos=483,288
 Size=319,164
 Collapsed=0
 
 [Window][New Table?]
-Pos=543,326
+Pos=547,326
 Size=224,68
 Collapsed=0
 
@@ -61,6 +61,36 @@ Collapsed=0
 [Window][Save ObjInfo]
 Pos=529,326
 Size=224,68
+Collapsed=0
+
+[Window][Hellow Camera]
+Pos=930,420
+Size=350,100
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=329,135
+Size=357,412
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=272,258
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=372,32
+Size=327,714
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=297,170
+Size=485,402
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=57,61
+Size=560,714
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -145,4 +175,11 @@ Column 3  Width=83
 Column 4  Width=84
 Column 5  Width=83
 Column 6  Width=84
+
+[Table][0x20DF7A63,4]
+RefScale=12
+Column 0  Width=30 Sort=0v
+Column 1  Width=40
+Column 2  Width=36
+Column 3  Weight=1.0000
 
