--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=208,346
+Pos=142,167
 Size=235,671
 Collapsed=0
 
@@ -29,12 +29,12 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1430,474
+Pos=1641,63
 Size=204,221
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1173,672
+Pos=1649,297
 Size=167,309
 Collapsed=0
 
@@ -99,12 +99,22 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=767,530
+Pos=1335,86
 Size=282,681
 Collapsed=0
 
 [Window][Edit TestObject10]
-Pos=1286,110
+Pos=788,326
 Size=410,403
+Collapsed=0
+
+[Window][Edit TestObject46]
+Pos=380,45
+Size=257,501
+Collapsed=0
+
+[Window][Edit TestObject50]
+Pos=60,60
+Size=189,148
 Collapsed=0
 
