Apply git ignore

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=142,167
+Pos=31,23
 Size=235,671
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1387,28
+Pos=1261,28
 Size=550,544
 Collapsed=1
 
@@ -29,13 +29,13 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1641,63
+Pos=906,96
 Size=204,221
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1649,297
-Size=167,309
+Pos=958,238
+Size=235,488
 Collapsed=0
 
 [Window][Edit TestObject8]
@@ -49,7 +49,7 @@ Size=356,354
 Collapsed=1
 
 [Window][Edit TestObject54]
-Pos=289,59
+Pos=377,409
 Size=213,215
 Collapsed=0
 
@@ -69,7 +69,7 @@ Size=189,92
 Collapsed=0
 
 [Window][Edit TestObject74]
-Pos=531,261
+Pos=427,135
 Size=189,92
 Collapsed=0
 
@@ -99,22 +99,47 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=1335,86
+Pos=629,113
 Size=282,681
 Collapsed=0
 
 [Window][Edit TestObject10]
-Pos=788,326
+Pos=550,330
 Size=410,403
 Collapsed=0
 
 [Window][Edit TestObject46]
-Pos=380,45
+Pos=111,385
 Size=257,501
 Collapsed=0
 
 [Window][Edit TestObject50]
-Pos=60,60
+Pos=673,564
 Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject118]
+Pos=303,369
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject58]
+Pos=197,249
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject62]
+Pos=656,-22
+Size=460,301
+Collapsed=0
+
+[Window][Edit TestObject66]
+Pos=314,85
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject70]
+Pos=1221,64
+Size=400,305
 Collapsed=0
 
