--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,21 @@
 *.so
 *.dylib
 
+#Build Results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+
 # Fortran module files
 *.mod
 *.smod
