Apply git ignore update

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -4,7 +4,7 @@ Size=235,671
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1261,28
+Pos=803,20
 Size=550,544
 Collapsed=1
 
@@ -29,12 +29,12 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1026,74
+Pos=1030,61
 Size=204,230
 Collapsed=0
 
 [Window][Object Editor]
-Pos=894,171
+Pos=1022,188
 Size=235,496
 Collapsed=0
 
@@ -141,5 +141,50 @@ Collapsed=0
 [Window][Edit TestObject70]
 Pos=1221,64
 Size=400,305
+Collapsed=0
+
+[Window][Edit TestObject78]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject82]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject90]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject94]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject98]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject102]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject106]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject110]
+Pos=60,60
+Size=189,148
+Collapsed=0
+
+[Window][Edit TestObject114]
+Pos=60,60
+Size=189,148
 Collapsed=0
 
