--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -281,7 +281,7 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlend.hlsl">
+    <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlendSK.hlsl">
       <FileType>Document</FileType>
     </ClInclude>
   </ItemGroup>
@@ -294,6 +294,16 @@ call Engine.bat</Command>
     <ClInclude Include="..\..\Resource\Shader\ScreenQuad.hlsl">
       <FileType>Document</FileType>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlend.hlsl">
+      <FileType>Document</FileType>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Resource\Shader\GBufferSK.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
