--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -29,13 +29,13 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1030,61
+Pos=1032,46
 Size=204,230
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1022,188
-Size=235,496
+Pos=993,301
+Size=235,493
 Collapsed=0
 
 [Window][Edit TestObject8]
@@ -99,7 +99,7 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=320,89
+Pos=107,59
 Size=282,681
 Collapsed=0
 
@@ -186,5 +186,40 @@ Collapsed=0
 [Window][Edit TestObject114]
 Pos=60,60
 Size=189,148
+Collapsed=0
+
+[Window][Hellow MapTool]
+Pos=0,10
+Size=400,600
+Collapsed=0
+
+[Window][Hellow Pivot]
+Pos=930,520
+Size=350,200
+Collapsed=0
+
+[Window][Hellow Camera]
+Pos=930,400
+Size=350,120
+Collapsed=0
+
+[Window][New Table?]
+Pos=518,317
+Size=252,86
+Collapsed=0
+
+[Window][Edit 10]
+Pos=623,381
+Size=697,470
+Collapsed=0
+
+[Window][Load ObjInfo]
+Pos=529,317
+Size=224,86
+Collapsed=0
+
+[Window][Save LoadingList]
+Pos=528,317
+Size=224,86
 Collapsed=0
 
