--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -34,7 +34,7 @@ Size=204,230
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1022,188
+Pos=1018,296
 Size=235,496
 Collapsed=0
 
@@ -99,7 +99,7 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=320,89
+Pos=280,33
 Size=282,681
 Collapsed=0
 
@@ -186,5 +186,10 @@ Collapsed=0
 [Window][Edit TestObject114]
 Pos=60,60
 Size=189,148
+Collapsed=0
+
+[Window][Edit TestEffect10]
+Pos=107,258
+Size=296,257
 Collapsed=0
 
