--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=31,23
+Pos=15,36
 Size=235,671
 Collapsed=0
 
@@ -99,7 +99,7 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=51,76
+Pos=235,33
 Size=282,681
 Collapsed=0
 
@@ -196,5 +196,10 @@ Collapsed=0
 [Window][Edit TestObject44]
 Pos=362,149
 Size=189,120
+Collapsed=0
+
+[Window][Edit TestEffect10]
+Pos=416,278
+Size=32,40
 Collapsed=0
 
