버텍스버퍼 최적화 하기전 커밋

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -29,12 +29,12 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1046,56
-Size=204,230
+Pos=1022,56
+Size=229,243
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1022,309
+Pos=1020,318
 Size=235,358
 Collapsed=0
 
@@ -99,13 +99,13 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=51,76
+Pos=27,19
 Size=282,681
 Collapsed=0
 
 [Window][Edit TestObject10]
-Pos=578,163
-Size=410,439
+Pos=350,55
+Size=612,593
 Collapsed=0
 
 [Window][Edit TestObject46]
@@ -195,6 +195,11 @@ Collapsed=0
 
 [Window][Edit TestObject44]
 Pos=362,149
+Size=189,120
+Collapsed=0
+
+[Window][Edit TestObject35]
+Pos=335,88
 Size=189,120
 Collapsed=0
 
