--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -99,12 +99,12 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=51,76
+Pos=38,89
 Size=282,681
 Collapsed=1
 
 [Window][Edit TestObject10]
-Pos=578,163
+Pos=34,157
 Size=410,439
 Collapsed=0
 
@@ -196,5 +196,15 @@ Collapsed=0
 [Window][Edit TestObject44]
 Pos=362,149
 Size=189,120
+Collapsed=0
+
+[Window][Edit Object10]
+Pos=1,122
+Size=346,260
+Collapsed=0
+
+[Window][Edit TestObject11]
+Pos=-6,383
+Size=276,252
 Collapsed=0
 
