네임테이블  new 할떄나 load 할떄 맵 초기화 코드 빠졌음

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -198,3 +198,33 @@ Pos=362,149
 Size=189,120
 Collapsed=0
 
+[Window][Hellow MapTool]
+Pos=0,10
+Size=400,600
+Collapsed=0
+
+[Window][Hellow Pivot]
+Pos=930,520
+Size=350,200
+Collapsed=0
+
+[Window][Hellow Camera]
+Pos=930,400
+Size=350,120
+Collapsed=0
+
+[Window][New Table?]
+Pos=395,284
+Size=252,86
+Collapsed=0
+
+[Window][Save LoadingList]
+Pos=529,317
+Size=224,86
+Collapsed=0
+
+[Window][Save ObjInfo]
+Pos=528,317
+Size=224,86
+Collapsed=0
+
