--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -34,7 +34,7 @@ Size=229,243
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1020,318
+Pos=1029,307
 Size=235,358
 Collapsed=0
 
@@ -99,7 +99,7 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=27,19
+Pos=20,384
 Size=282,681
 Collapsed=1
 
@@ -201,5 +201,15 @@ Collapsed=0
 [Window][Edit TestObject35]
 Pos=335,88
 Size=189,120
+Collapsed=0
+
+[Window][Edit TestObject11]
+Pos=9,57
+Size=326,263
+Collapsed=0
+
+[Window][Edit Object10]
+Pos=3,326
+Size=433,274
 Collapsed=0
 
