imgui.inl apply

--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudio
+Client/Project/imgui.ini
