--- a/Client/Project/Client.vcxproj.filters
+++ b/Client/Project/Client.vcxproj.filters
@@ -37,6 +37,18 @@
     <Filter Include="02.GameObject\Effect">
       <UniqueIdentifier>{8e0c6ea8-0509-4c04-b553-c46c6c7ecfa3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02.GameObject\UI">
+      <UniqueIdentifier>{86694f81-3549-4ffa-aa75-f5f0df8b391e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObject\UI\Font">
+      <UniqueIdentifier>{34d058e5-58fd-45cc-ab01-30d5378d4b93}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObject\UI\BtlPanel">
+      <UniqueIdentifier>{3f0a56b6-7842-4276-ab21-323f42bd0c53}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObject\Effect\Weapon">
+      <UniqueIdentifier>{991dfce5-4d09-4c4f-a8fb-51ee90e5e080}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -70,7 +82,7 @@
       <Filter>02.GameObject\00.Camera</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Eff_OvertureHand.h">
-      <Filter>02.GameObject\Effect</Filter>
+      <Filter>02.GameObject\Effect\Weapon</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -109,7 +121,7 @@
       <Filter>02.GameObject\00.Camera</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\Eff_OvertureHand.cpp">
-      <Filter>02.GameObject\Effect</Filter>
+      <Filter>02.GameObject\Effect\Weapon</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
