--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=15,36
-Size=235,671
+Pos=36,33
+Size=235,585
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=803,20
+Pos=505,458
 Size=550,544
 Collapsed=1
 
@@ -29,7 +29,7 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1022,56
+Pos=474,15
 Size=229,243
 Collapsed=0
 
@@ -211,5 +211,10 @@ Collapsed=0
 [Window][Edit Object10]
 Pos=3,326
 Size=433,274
+Collapsed=0
+
+[Window][Edit BtlPanel11]
+Pos=299,155
+Size=534,303
 Collapsed=0
 
