맵툴 인수인계

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -34,9 +34,9 @@ Size=204,230
 Collapsed=0
 
 [Window][Object Editor]
-Pos=1022,309
+Pos=945,306
 Size=235,358
-Collapsed=0
+Collapsed=1
 
 [Window][Edit TestObject8]
 Pos=866,262
@@ -99,7 +99,7 @@ Size=333,250
 Collapsed=0
 
 [Window][Log]
-Pos=51,76
+Pos=46,647
 Size=282,681
 Collapsed=0
 
@@ -214,7 +214,7 @@ Size=350,120
 Collapsed=0
 
 [Window][New Table?]
-Pos=395,284
+Pos=397,284
 Size=252,86
 Collapsed=0
 
@@ -227,4 +227,9 @@ Collapsed=0
 Pos=528,317
 Size=224,86
 Collapsed=0
+
+[Window][Edit Object259]
+Pos=830,363
+Size=377,413
+Collapsed=1
 
