--- a/Client/Project/Client.vcxproj
+++ b/Client/Project/Client.vcxproj
@@ -159,6 +159,11 @@
   <ItemGroup>
     <ClInclude Include="..\Header\Application.h" />
     <ClInclude Include="..\Header\Camera.h" />
+    <ClInclude Include="..\Header\FSMBase.h" />
+    <ClInclude Include="..\Header\FSMState.h" />
+    <ClInclude Include="..\Header\NeroFSM.h" />
+    <ClInclude Include="..\Header\Nero.h" />
+    <ClInclude Include="..\Header\NeroState.h" />
     <ClInclude Include="..\Header\TestAnimationObject.h" />
     <ClInclude Include="..\Header\Eff_OvertureHand.h" />
     <ClInclude Include="..\Header\TestObject.h" />
@@ -172,6 +177,11 @@
   <ItemGroup>
     <ClCompile Include="..\Source\Application.cpp" />
     <ClCompile Include="..\Source\Camera.cpp" />
+    <ClCompile Include="..\Source\FSMBase.cpp" />
+    <ClCompile Include="..\Source\FSMState.cpp" />
+    <ClCompile Include="..\Source\NeroFSM.cpp" />
+    <ClCompile Include="..\Source\Nero.cpp" />
+    <ClCompile Include="..\Source\NeroState.cpp" />
     <ClCompile Include="..\Source\TestAnimationObject.cpp" />
     <ClCompile Include="..\Source\Eff_OvertureHand.cpp" />
     <ClCompile Include="..\Source\TestObject.cpp" />
