--- a/Client/Project/Client.vcxproj
+++ b/Client/Project/Client.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="..\Header\Application.h" />
     <ClInclude Include="..\Header\BtlPanel.h" />
     <ClInclude Include="..\Header\Camera.h" />
+    <ClInclude Include="..\Header\Eff_Glint.h" />
     <ClInclude Include="..\Header\TestAnimationObject.h" />
     <ClInclude Include="..\Header\Eff_OvertureHand.h" />
     <ClInclude Include="..\Header\TestObject.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="..\Source\Application.cpp" />
     <ClCompile Include="..\Source\BtlPanel.cpp" />
     <ClCompile Include="..\Source\Camera.cpp" />
+    <ClCompile Include="..\Source\Eff_Glint.cpp" />
     <ClCompile Include="..\Source\TestAnimationObject.cpp" />
     <ClCompile Include="..\Source\Eff_OvertureHand.cpp" />
     <ClCompile Include="..\Source\TestObject.cpp" />
